--- a/src/app/tox-create/tox-create.component.html
+++ b/src/app/tox-create/tox-create.component.html
@@ -1,1 +1,25 @@
-<p>tox-create works!</p>
+<div class="container">
+    <form>
+        <div class="form-group">
+            <label for="moleculeName">Nom de la molécule</label>
+            <input type="text" name="moleculeName" class="form-control" id="moleculeName" aria-describedby="moleculeName">
+        </div>
+        <div class="form-group">
+            <label for="moleculeClasse">Password</label>
+            <select class="form-control" name="moleculeClasse" id="moleculeClasse">
+        <option value="cancerogene">Cancérogènes</option>
+        <option value="mutagene">Mutagènes</option>
+        <option value="ToxiqueReproduction">Toxiques pour la reproduction</option>
+      </select>
+        </div>
+        <div class="form-group">
+            <label for="moleculeDescription">Description de la substance</label>
+            <textarea class="form-control" id="moleculeDescription" name="moleculeDescription" rows="3"></textarea>
+        </div>
+        <div class="form-group">
+            <label for="moleculeImage">Image</label>
+            <input type="file" class="form-control-file" id="moleculeImg">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</div>
