--- a/src/app/tox-create/tox-create.component.html
+++ b/src/app/tox-create/tox-create.component.html
@@ -1,12 +1,12 @@
 <div class="container">
-    <form>
+    <form [formGroup]="toxData" (ngSubmit)="submit()">
         <div class="form-group">
             <label for="moleculeName">Nom de la molécule</label>
-            <input type="text" name="moleculeName" class="form-control" id="moleculeName" aria-describedby="moleculeName">
+            <input type="text" formControlName="moleculeName" class="form-control" id="moleculeName" aria-describedby="moleculeName">
         </div>
         <div class="form-group">
             <label for="moleculeClasse">Password</label>
-            <select class="form-control" name="moleculeClasse" id="moleculeClasse">
+            <select class="form-control" formControlName="moleculeClasse" id="moleculeClasse">
         <option value="cancerogene">Cancérogènes</option>
         <option value="mutagene">Mutagènes</option>
         <option value="ToxiqueReproduction">Toxiques pour la reproduction</option>
@@ -14,12 +14,27 @@
         </div>
         <div class="form-group">
             <label for="moleculeDescription">Description de la substance</label>
-            <textarea class="form-control" id="moleculeDescription" name="moleculeDescription" rows="3"></textarea>
+            <textarea class="form-control" id="moleculeDescription" formControlName="moleculeDescription" rows="3"></textarea>
         </div>
         <div class="form-group">
-            <label for="moleculeImage">Image</label>
-            <input type="file" class="form-control-file" id="moleculeImg">
+            <div class="file">
+                <label class="file-label">
+          <input class="file-input" type="file" accept="image/*" (change)="showPreview($event)">
+          <span class="file-cta">
+            <span class="file-icon">
+              <i class="fa fa-upload"></i>
+            </span>
+            <span class="file-label">
+              Choose a file…
+            </span>
+          </span>
+        </label>
+            </div>
+            <div class="imagePreview" *ngIf="imageURL && imageURL !== ''">
+                <img [src]="imageURL" [alt]="toxData.value.name" style="height:50%; width:50%">
+            </div>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+
 </div>
