--- a/src/app/tox-create/tox-create.component.html
+++ b/src/app/tox-create/tox-create.component.html
@@ -9,7 +9,7 @@
             <select class="form-control" formControlName="moleculeClasse" id="moleculeClasse">
         <option value="cancerogene">Cancérogènes</option>
         <option value="mutagene">Mutagènes</option>
-        <option value="ToxiqueReproduction">Toxiques pour la reproduction</option>
+        <option value="repro">Toxiques pour la reproduction</option>
       </select>
         </div>
         <div class="form-group">
