--- a/src/app/tox-list/tox-list.component.html
+++ b/src/app/tox-list/tox-list.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div style="display: flex; justify-content:center; align-content: center; flex-wrap:wrap">
-        <div *ngFor="let tox of molecules" class="card" style="width: 18rem; margin:1em">
+        <div *ngFor="let tox of molecules" class="card" style="width: 18rem; margin:1em;">
             <img src="{{tox.moleculeImage}}" class="card-img-top">
             <h6 class="card-subtitle mb-2 text-muted">{{ tox.moleculeClasse}}</h6>
             <div class="card-body">
@@ -12,3 +12,8 @@
     </div>
 
 </div>
+
+<!-- TODO
+-- Add navbar or something like that
+-- flipping cards like dark side of molecules
+-->
