--- a/src/app/tox-list/tox-list.component.html
+++ b/src/app/tox-list/tox-list.component.html
@@ -6,7 +6,7 @@
             <div class="card-body">
                 <h5 class="card-title"> {{ tox.moleculeName }}</h5>
                 <p class="card-text">{{ tox.moleculeDescription }}</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a class="btn btn-danger" (click)="deleteMol(tox.id)">Delete</a>
             </div>
         </div>
     </div>
