--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,3 +1,3 @@
-<div class="container">
-    <h2 class="display5">Tox around</h2>
+<div>
+    <h2 class="display5" class="text-center text-warning">Tox around</h2>
 </div>
