--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,3 +1,3 @@
 <div>
-    <h2 class="display5" class="text-center text-warning">Tox around</h2>
+    <h2 class="display5" class="text-center text-warning">TOX AROUND</h2>
 </div>
