--- a/src/styles.css
+++ b/src/styles.css
@@ -63,13 +63,10 @@ textarea:focus,
     backface-visibility: hidden;
 }
 
-.flip-card-front {
-    background-color: #bbb;
-    color: black;
-}
+.flip-card-front {}
 
 .flip-card-back {
-    background-color: #2980b9;
+    background-color: rgba(126, 239, 104, 0.8);
     color: white;
     transform: rotateY(180deg);
 }
