--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,8 @@
 html,
 css {
     height: 100vh;
-    width: 100vw;
-    max-width: 100vw;
+    width: 100%;
+    max-width: 100% !important;
     padding: 0;
     margin: 0;
     font-family: 'Poppins', sans-serif;
@@ -38,6 +38,7 @@ textarea:focus,
     width: 300px;
     height: 300px;
     perspective: 1000px;
+    margin: 1em;
 }
 
 .flip-card-inner {
@@ -67,6 +68,5 @@ textarea:focus,
 
 .flip-card-back {
     background-color: rgba(126, 239, 104, 0.8);
-    color: white;
     transform: rotateY(180deg);
 }
