--- a/src/styles.css
+++ b/src/styles.css
@@ -69,4 +69,7 @@ textarea:focus,
 .flip-card-back {
     background-color: rgba(126, 239, 104, 0.8);
     transform: rotateY(180deg);
+    padding: 1em;
+    text-align: left;
+    text-justify: center;
 }
