--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
+
+/* 
 html,
 css {
     height: 100vh;
@@ -72,4 +74,4 @@ textarea:focus,
     padding: 1em;
     text-align: left;
     text-justify: center;
-}
+} */
