--- a/src/app/air-pollution/air-pollution.component.html
+++ b/src/app/air-pollution/air-pollution.component.html
@@ -1,1 +1,11 @@
-<p>air-pollution works!</p>
+<div class="ui-inputgroup">
+    <span class="ui-inputgroup-addon"><i class="pi pi-user"></i></span>
+    <input type="text" pInputText placeholder="Username">
+</div>
+
+<div class="ui-inputgroup">
+    <span class="ui-inputgroup-addon"><i class="pi pi-tags"></i></span>
+    <input type="text" pInputText placeholder="Price">
+    <span class="ui-inputgroup-addon">$</span>
+    <span class="ui-inputgroup-addon">.00</span>
+</div>
