--- a/src/app/air-pollution/air-pollution.component.html
+++ b/src/app/air-pollution/air-pollution.component.html
@@ -1,11 +1,21 @@
-<div class="ui-inputgroup">
-    <span class="ui-inputgroup-addon"><i class="pi pi-user"></i></span>
-    <input type="text" pInputText placeholder="Username">
-</div>
-
-<div class="ui-inputgroup">
-    <span class="ui-inputgroup-addon"><i class="pi pi-tags"></i></span>
-    <input type="text" pInputText placeholder="Price">
-    <span class="ui-inputgroup-addon">$</span>
-    <span class="ui-inputgroup-addon">.00</span>
+<div class="p-container">
+    <div class="p-grid">
+        <div class="p-col"></div>
+        <div class="p-col">
+            <div class="p-grid">
+                <div class="p-col">
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon"><i class="pi pi-user"></i></span>
+                        <input type="text" pInputText placeholder="prenom">
+                    </div>
+                </div>
+                <div class="p-col">
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon"><i class="pi pi-user"></i></span>
+                        <input type="text" pInputText placeholder="Nom">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
