--- a/src/app/air-pollution/air-pollution.component.html
+++ b/src/app/air-pollution/air-pollution.component.html
@@ -1,21 +1,53 @@
 <div class="p-container">
     <div class="p-grid">
         <div class="p-col"></div>
-        <div class="p-col">
+        <div class="p-col form">
             <div class="p-grid">
                 <div class="p-col">
+                    <label for="lastname">Nom:</label>
                     <div class="ui-inputgroup">
                         <span class="ui-inputgroup-addon"><i class="pi pi-user"></i></span>
-                        <input type="text" pInputText placeholder="prenom">
+                        <input type="text" pInputText id="lastname" placeholder="nom">
                     </div>
                 </div>
                 <div class="p-col">
+                    <label for="firstname">Prenom:</label>
                     <div class="ui-inputgroup">
                         <span class="ui-inputgroup-addon"><i class="pi pi-user"></i></span>
-                        <input type="text" pInputText placeholder="Nom">
+                        <input type="text" id="firstname" pInputText placeholder="prenom">
+                    </div>
+                </div>
+            </div>
+
+            <div class="p-grid">
+                <div class="p-col">
+                    <label for="email">Email:</label>
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon"><i class="pi pi-envelope"></i></span>
+                        <input type="email" pInputText id="email" placeholder="email">
+                    </div>
+                </div>
+
+                <div class="p-col">
+                    <label for="email">Choisissiez une date de début:</label>
+                    <div class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon"><i class="pi pi-calendar "></i></span>
+                        <p-calendar dateFormat="dd.mm.yy" placeholder="date"></p-calendar>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+
+<style>
+    .p-container {
+        height: 80vh;
+        background-image: linear-gradient(rgba(85, 61, 61, 0.596) 0%, rgba(211, 211, 211, 0.5) 100%), url('/assets/5.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: left;
+        ;
+    }
+</style>
