--- a/src/app/air-pollution/air-pollution.component.html
+++ b/src/app/air-pollution/air-pollution.component.html
@@ -2,40 +2,42 @@
     <div class="p-grid">
         <div class="p-col"></div>
         <div class="p-col form">
-            <div class="p-grid">
-                <div class="p-col">
-                    <label for="lastname">Nom:</label>
-                    <div class="ui-inputgroup">
-                        <span class="ui-inputgroup-addon"><i class="pi pi-user"></i></span>
-                        <input type="text" pInputText id="lastname" placeholder="nom">
+            <form [formGroup]="userData">
+                <div class="p-grid">
+                    <div class="p-col">
+                        <label for="lastname">Nom:</label>
+                        <div class="ui-inputgroup">
+                            <span class="ui-inputgroup-addon"><i class="pi pi-user"></i></span>
+                            <input type="text" formControlName="lastname" pInputText id="lastname" placeholder="nom">
+                        </div>
                     </div>
-                </div>
-                <div class="p-col">
-                    <label for="firstname">Prenom:</label>
-                    <div class="ui-inputgroup">
-                        <span class="ui-inputgroup-addon"><i class="pi pi-user"></i></span>
-                        <input type="text" id="firstname" pInputText placeholder="prenom">
-                    </div>
-                </div>
-            </div>
-
-            <div class="p-grid">
-                <div class="p-col">
-                    <label for="email">Email:</label>
-                    <div class="ui-inputgroup">
-                        <span class="ui-inputgroup-addon"><i class="pi pi-envelope"></i></span>
-                        <input type="email" pInputText id="email" placeholder="email">
+                    <div class="p-col">
+                        <label for="firstname">Prenom:</label>
+                        <div class="ui-inputgroup">
+                            <span class="ui-inputgroup-addon"><i class="pi pi-user"></i></span>
+                            <input type="text" formControlName="firstname" id="firstname" pInputText placeholder="prenom">
+                        </div>
                     </div>
                 </div>
 
-                <div class="p-col">
-                    <label for="email">Choisissiez une date de début:</label>
-                    <div class="ui-inputgroup">
-                        <span class="ui-inputgroup-addon"><i class="pi pi-calendar "></i></span>
-                        <p-calendar dateFormat="dd.mm.yy" placeholder="date"></p-calendar>
+                <div class="p-grid">
+                    <div class="p-col">
+                        <label for="email">Email:</label>
+                        <div class="ui-inputgroup">
+                            <span class="ui-inputgroup-addon"><i class="pi pi-envelope"></i></span>
+                            <input type="email" formControlName="email" pInputText id="email" placeholder="email">
+                        </div>
+                    </div>
+
+                    <div class="p-col">
+                        <label for="email">Choisissiez une date de début:</label>
+                        <div class="ui-inputgroup">
+                            <span class="ui-inputgroup-addon"><i class="pi pi-calendar "></i></span>
+                            <p-calendar dateFormat="dd.mm.yy" formControlName="sessionDate" placeholder="date"></p-calendar>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </form>
         </div>
     </div>
 </div>
