--- a/src/app/air-pollution/air-pollution.component.html
+++ b/src/app/air-pollution/air-pollution.component.html
@@ -63,7 +63,7 @@
 <style>
     .p-container {
         height: 80vh;
-        background-image: linear-gradient(to right, rgba(85, 61, 61, 0.089) 0%, rgba(211, 211, 211, 0.89) 100%), url('/assets/5.png');
+        background-image: linear-gradient(to right, rgba(85, 61, 61, 0.089) 0%, rgba(211, 211, 211, 0.89) 100%), url('/assets/5.jpg');
         background-size: cover;
         background-repeat: no-repeat;
         background-position: left;
