--- a/src/app/air-pollution/air-pollution.component.html
+++ b/src/app/air-pollution/air-pollution.component.html
@@ -1,9 +1,9 @@
 <div class="p-container">
     <div class="p-grid">
         <div class="p-col"></div>
-        <div class="p-col form">
+        <div class="p-col  p-col1 p-col-align-center">
             <form [formGroup]="userData" (ngSubmit)="logData()">
-                <div class="p-grid">
+                <div class="p-grid ">
                     <div class="p-col">
                         <label for="lastname">Nom:</label>
                         <div class="ui-inputgroup">
@@ -63,7 +63,7 @@
 <style>
     .p-container {
         height: 80vh;
-        background-image: linear-gradient(to right, rgba(85, 61, 61, 0.089) 0%, rgba(211, 211, 211, 0.89) 100%), url('/assets/5.jpg');
+        background-image: linear-gradient(to right, rgba(85, 61, 61, 0.089) 0%, rgba(252, 252, 252, 0.89) 100%), url('/assets/5.jpg');
         background-size: cover;
         background-repeat: no-repeat;
         background-position: left;
@@ -71,11 +71,14 @@
     }
     
     label {
-        color: white;
         font-size: 110%;
     }
     
     .text-danger {
         color: #d50000;
+    }
+    
+    .p-col1 {
+        padding-top: 10%;
     }
 </style>
