--- a/src/app/air-pollution/air-pollution.component.html
+++ b/src/app/air-pollution/air-pollution.component.html
@@ -71,7 +71,8 @@
     }
     
     label {
-        font-size: 110%;
+        font-size: 105%;
+        padding: 0.5em;
     }
     
     .text-danger {
