--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,16 +1,15 @@
-<p-toolbar>
-    <div class="ui-toolbar-group-left">
-        <button pButton type="button" label="New" icon="pi pi-plus"></button>
-        <button pButton type="button" label="Upload" icon="pi pi-upload" class="ui-button-success"></button>
+<div class="toolb">
+    <p-toolbar>
+        <div class="ui-toolbar-group-left">
+            <a routerLink="/">
+        Accueil</a>
+        </div>
 
-        <i class="pi pi-bars"></i>
-
-        <p-splitButton label="Save" icon="pi pi-check" [model]="items" styleClass="ui-button-warning"></p-splitButton>
-    </div>
-
-    <div class="ui-toolbar-group-right">
-        <button pButton type="button" icon="pi pi-search"></button>
-        <button pButton type="button" icon="pi pi-calendar" class="ui-button-success"></button>
-        <button pButton type="button" icon="pi pi-times" class="ui-button-danger"></button>
-    </div>
-</p-toolbar>
+        <div class="ui-toolbar-group-right">
+            <a routerLink="/services">
+                Nos services</a>
+            <a routerLink="/about">
+                    A Propos</a>
+        </div>
+    </p-toolbar>
+</div>
